adding interface to api

--- a/firstRestFulApp/nodetest2/views/index.jade
+++ b/firstRestFulApp/nodetest2/views/index.jade
@@ -5,8 +5,8 @@ block content
   p Welcome to first rest app
   
   #wrapper
-
     h2 User List
+      #userList
       table
         thead
           th Username
