--- a/firstRestFulApp/nodetest2/views/index.jade
+++ b/firstRestFulApp/nodetest2/views/index.jade
@@ -2,15 +2,37 @@ extends layout
 
 block content
   h1= title
-  p Welcome to first rest app
-  
+  p Welcome to our test
+
+  // Wrapper
   #wrapper
+
+    // USER INFO
+    #userInfo
+      h2 User Info
+      p
+        strong Name:
+        |  <span id='userInfoName'></span>
+        br
+        strong Age:
+        |  <span id='userInfoAge'></span>
+        br
+        strong Gender:
+        |  <span id='userInfoGender'></span>
+        br
+        strong Location:
+        |  <span id='userInfoLocation'></span>
+    // /USER INFO
+
+    // USER LIST
     h2 User List
-      #userList
+    #userList
       table
         thead
-          th Username
+          th UserName
           th Email
-          th Delete ?
+          th Delete?
         tbody
-      
+    // /USER LIST
+
+  // /WRAPPER
