adding user with AJAX method but steel has bug

--- a/firstRestFulApp/nodetest2/views/index.jade
+++ b/firstRestFulApp/nodetest2/views/index.jade
@@ -35,4 +35,19 @@ block content
         tbody
     // /USER LIST
 
+    // Add User
+    h2 Add User
+    #addUser
+      fieldset
+        input#inputUserName(type="text", placeholder='Username')
+        input#inputUserEmail(type="text", placeholder='Email')
+        br
+        input#inputUserFullname(type="text", placeholder='Full name')
+        input#userAge(type='text', placeholder='Age')
+        br
+        input#userLocation(type="text", placeholder='userLocation')
+        input#userGender(type='text', placeholder='gender')
+        br
+        button#btnAddUser Add user
+
   // /WRAPPER
